[gd_scene load_steps=10 format=3 uid="uid://cxarqnogejmud"]

[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/manager/NetworkGodotMiddlewareManager.gd" id="1_6je7j"]
[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/manager/NetworkServerDatabaseManager.gd" id="1_fjpu8"]
[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/manager/NetworkGodotEndpointManager.gd" id="2_xg8ge"]
[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/network_handler/DatabaseGodotServerAuthHandler.gd" id="3_0snkw"]
[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/network_handler/DatabaseGodotUserLoginHandler.gd" id="4_ket4y"]
[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/network_handler/DatabaseGodotUserTokenHandler.gd" id="5_7jxo2"]
[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/network_handler/DatabaseGodotCharacterFetchHandler.gd" id="6_8jwu0"]
[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/network_handler/DatabaseGodotCharacterSelectHandler.gd" id="7_riixv"]
[ext_resource type="Script" path="res://network/module/network_database/database_godot_websocket/network_handler/DatabaseGodotCharacterUpdateHandler.gd" id="8_juiio"]

[node name="NetworkDatabaseModule" type="Node"]

[node name="Manager" type="Node" parent="."]

[node name="NetworkServerDatabaseManager" type="Node" parent="Manager"]
script = ExtResource("1_fjpu8")

[node name="NetworkMiddlewareManager" type="Node" parent="Manager"]
script = ExtResource("1_6je7j")

[node name="NetworkEndpointManager" type="Node" parent="Manager"]
script = ExtResource("2_xg8ge")

[node name="Service" type="Node" parent="."]

[node name="DatabaseServer" type="Node" parent="Service"]

[node name="DatabaseServerAuthService" type="Node" parent="Service/DatabaseServer"]
script = ExtResource("3_0snkw")

[node name="DatabaseUser" type="Node" parent="Service"]

[node name="DatabaseUserLoginService" type="Node" parent="Service/DatabaseUser"]
script = ExtResource("4_ket4y")

[node name="DatabaseUserTokenService" type="Node" parent="Service/DatabaseUser"]
script = ExtResource("5_7jxo2")

[node name="DatabaseCharacter" type="Node" parent="Service"]

[node name="DatabaseCharacterFetchService" type="Node" parent="Service/DatabaseCharacter"]
script = ExtResource("6_8jwu0")

[node name="DatabaseCharacterSelectService" type="Node" parent="Service/DatabaseCharacter"]
script = ExtResource("7_riixv")

[node name="DatabaseCharacterUpdateService" type="Node" parent="Service/DatabaseCharacter"]
script = ExtResource("8_juiio")
